--- a/react/index.html
+++ b/react/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Communication Test</title>
+    <meta name="description" content="React to Swift communication demo" />
+    <link rel="apple-touch-icon" href="/vite.svg" sizes="180x180" />
+    <link rel="mask-icon" href="/vite.svg" color="#FFFFFF" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
-<script>
-  // var event = ;
-</script>
