--- a/react/index.html
+++ b/react/index.html
@@ -8,10 +8,7 @@
     <meta name="description" content="React to Swift communication demo" />
     <link rel="apple-touch-icon" href="/vite.svg" sizes="180x180" />
     <link rel="mask-icon" href="/vite.svg" color="#FFFFFF" />
-    <link
-      rel="assetlinks.json file"
-      href="%PUBLIC_URL%/.well-known/assetlinks.json"
-    />
+    <link rel="assetlinks.json file" href="/.well-known/assetlinks.json" />
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
